fixing contrast issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,7 @@ nav {
 }
 
 nav a { 
-  color: white;
+  color: rgb(255, 255, 255);
   display: block;
   padding: .5rem;
   text-decoration: none;
